# derive-getters

./: .build.yml  Cargo.toml  README.md
src/: consume.rs  dissolve.rs  dissolve_mut.rs  dissolve_ref.rs  extract.rs  faultmsg.rs  getters.rs  getters2.rs  lib.rs
tests/: 07-dissolve-basic.rs  08-dissolve-generic-and-ref.rs  lib.rs
